--- a/Rocketseat/Maratona Explorer/styles.css
+++ b/Rocketseat/Maratona Explorer/styles.css
@@ -5,14 +5,11 @@
 body{
     background-color: black;
     color: white;
-    text-align: center;
     font-family: sans-serif;
+    margin-top: 100;
+    text-align: center;
 }
 
-img{  
-    margin-top: 100px;
-} 
-  
 #container{
     width: 80%;
     max-width: 400px;
@@ -20,34 +17,30 @@ img{
 }
 
 h1{
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin-top: 40;
     opacity: 0.9;
 }
 
 p{
+    margin-top: 10px;
     margin-bottom: 40px;
     opacity: 0.7;
 }
- 
-input, button{
+
+button, input{
     display: block;
     width: 100%;
-
     padding: 20px;
     border-radius: 4px;
 }
 
-input{
-    margin-bottom: 20px;
-}
-
 button{
+    color: white;
+    margin-top: 20px;
     border: none;
     background-color: blueviolet;
-    color: white;
     transition: filter 0.2s;
-} 
+}
 
 button:hover{
     filter: brightness(1.2);
